# scientific-wg

./: .gitignore  .gitreview  .zuul.yaml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: index.rst  openstack-and-federated-identity.rst  openstack-and-high-performance-data.rst  openstack-and-hpc-infrastructure.rst  openstack-and-hpc-network.rst  openstack-and-hpc-workloads.rst  openstack-and-virtualised-hpc.rst
tests/: test_fake.py
